--- a/app/src/main/res/layout/fragment_registrarme.xml
+++ b/app/src/main/res/layout/fragment_registrarme.xml
@@ -54,7 +54,7 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textViewNombre"
+            app:layout_constraintStart_toEndOf="@+id/textViewNombrePlatoPedido"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
@@ -229,7 +229,7 @@
             app:layout_constraintStart_toEndOf="@+id/switchNotificacionEmail" />
 
         <TextView
-            android:id="@+id/textViewNombre"
+            android:id="@+id/textViewNombrePlatoPedido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -248,7 +248,7 @@
             android:text="@string/registro_password"
             android:textSize="16sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/editTextPassword"
-            app:layout_constraintStart_toStartOf="@+id/textViewNombre" />
+            app:layout_constraintStart_toStartOf="@+id/textViewNombrePlatoPedido" />
 
         <TextView
             android:id="@+id/textViewPasswordRepeat"
