Arreglando recycler view

--- a/app/src/main/res/layout/activity_agregar_platos_al_pedido.xml
+++ b/app/src/main/res/layout/activity_agregar_platos_al_pedido.xml
@@ -9,8 +9,9 @@
 
     <ScrollView
         android:id="@+id/ScrollViewListaPlatos"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -23,19 +24,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/pedido_card" />
+
         </androidx.appcompat.widget.LinearLayoutCompat>
+
     </ScrollView>
 
     <Button
         android:id="@+id/buttonAgregarAMiPedido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/buttonAgregarAMiPedido"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/bttn_rounded"
+        android:text="@string/buttonAgregarAMiPedido"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ScrollViewListaPlatos" />
-
+        app:layout_constraintTop_toBottomOf="@+id/ScrollViewListaPlatos" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
