--- a/app/src/main/res/layout/fragment_crear_pedido.xml
+++ b/app/src/main/res/layout/fragment_crear_pedido.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:background="@drawable/bttn_rounded"
+        android:background="@drawable/bttn_rounded_disabled"
         android:text="@string/buttonEnviarPedido"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
