--- a/app/src/main/res/layout/pedido_card.xml
+++ b/app/src/main/res/layout/pedido_card.xml
@@ -62,8 +62,9 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginStart="2dp"
-            android:ems="2"
+            android:ems="4"
             android:inputType="number"
+            android:textSize="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/buttonMinusPlato"
             app:layout_constraintStart_toEndOf="@+id/buttonMinusPlato"
             app:layout_constraintTop_toTopOf="@+id/buttonMinusPlato" />
