--- a/app/src/main/res/layout/fragment_crear_pedido.xml
+++ b/app/src/main/res/layout/fragment_crear_pedido.xml
@@ -7,6 +7,33 @@
     android:background="#F3F1F1"
     android:visibility="visible">
 
+    <ScrollView
+        android:id="@+id/ScrollViewListaPlatosEnPedido"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCrearPedido"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewBuscarPedido">
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/layuotRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/platoInPedidoRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/plato_en_pedido_card" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </ScrollView>
+
     <Button
         android:id="@+id/buttonCrearPedido"
         style="@style/Widget.AppCompat.Button"
@@ -51,4 +78,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
