--- a/app/src/main/res/layout/activity_agregar_platos_al_pedido.xml
+++ b/app/src/main/res/layout/activity_agregar_platos_al_pedido.xml
@@ -23,7 +23,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/platoInPedidoRecyclerView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/plato_en_pedido_card" />
 
