--- a/app/src/main/res/layout/pedido_card.xml
+++ b/app/src/main/res/layout/pedido_card.xml
@@ -48,7 +48,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="145dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/bttn_rounded"
+            android:background="@drawable/bttn_rounded_yellow"
             android:text="@string/buttonAgregarAMiPedido"
             android:textColor="@android:color/background_dark"
             app:layout_constraintBottom_toBottomOf="parent"
