--- a/app/src/main/res/layout/plato_card.xml
+++ b/app/src/main/res/layout/plato_card.xml
@@ -21,7 +21,7 @@
             android:layout_height="35dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/bttn_rounded"
+            android:background="@drawable/bttn_rounded_yellow"
             android:text="@string/boton_ofertar_plato"
             app:layout_constraintBottom_toTopOf="@+id/buttonEditar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/bttn_rounded"
+            android:background="@drawable/bttn_rounded_yellow"
             android:text="@string/boton_editar_plato"
             app:layout_constraintBottom_toTopOf="@+id/buttonEliminar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
             android:layout_height="35dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/bttn_rounded"
+            android:background="@drawable/bttn_rounded_yellow"
             android:text="@string/boton_eliminar_plato"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
