--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorTituloText">#FFDA3A</color>
     <color name="colorGrisDesactivado">#bdbdbd</color>
     <color name="colorFondoAmarillo">#FFDA3A</color>
+    <color name="colorAdicional">#FF3345</color>
 </resources>
