--- a/app/src/main/res/values/estados_de_pedidos.xml
+++ b/app/src/main/res/values/estados_de_pedidos.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="states_array">
+        <item>TODOS</item>
         <item>PENDIENTE</item>
         <item>ENVIADO</item>
-        <item>RECHAZADO</item>
         <item>ACEPTADO</item>
+        <item>RECHAZADO</item>
         <item>EN_PREPARACION</item>
         <item>EN_ENVIO</item>
         <item>ENTREGADO</item>
