--- a/app/src/main/res/layout/fragment_new_item.xml
+++ b/app/src/main/res/layout/fragment_new_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    android:id="@+id/scrollView2"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F3F1F1">
@@ -14,11 +13,22 @@
         android:layout_height="match_parent">
 
         <Button
+            android:id="@+id/buttonSacarFoto"
+            android:layout_width="110dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/bttn_rounded_yellow"
+            android:text="@string/botonSacarFoto"
+            android:textColor="@android:color/background_dark"
+            app:layout_constraintStart_toStartOf="@+id/textView7"
+            app:layout_constraintTop_toBottomOf="@+id/editTextCaloriasPlato" />
+
+        <Button
             android:id="@+id/buttonCrearPlato"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="132dp"
             android:layout_height="43dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="80dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/bttn_rounded_yellow"
             android:text="@string/alta_plato_guardar"
@@ -26,9 +36,8 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextCaloriasPlato" />
+            app:layout_constraintTop_toBottomOf="@+id/buttonSacarFoto" />
 
         <EditText
             android:id="@+id/editTextNombrePlato"
@@ -106,6 +115,16 @@
             android:text="@string/alta_plato_calorias"
             app:layout_constraintBaseline_toBaselineOf="@+id/editTextCaloriasPlato"
             app:layout_constraintStart_toStartOf="@+id/textView6" />
+
+        <ImageView
+            android:id="@+id/imageViewPlato"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintBottom_toBottomOf="@+id/buttonSacarFoto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/buttonSacarFoto"
+            app:layout_constraintTop_toTopOf="@+id/buttonSacarFoto"
+            app:srcCompat="@drawable/hamburguesa" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
 
